syntax = "proto3";

package discord;

option go_package = "github.com/EliasStar/BacoTell/internal/proto/discordpb";

message ApplicationCommand {
    uint32 type = 1;

    string name = 2;
    map<string, string> name_localizations = 3;

    string description = 4;
    map<string, string> description_localizations = 5;

    repeated ApplicationCommandOption options = 6;

    int64 default_member_permissions = 7;
    bool nsfw = 8;
}

message ApplicationCommandOption {
    uint32 type = 1;

    string name = 2;
    map<string, string> name_localizations = 3;

    string description = 4;
    map<string, string> description_localizations = 5;

    bool required = 6;

    repeated ApplicationCommandOptionChoice choices = 7;
    repeated ApplicationCommandOption options = 8;

    repeated uint32 channel_types = 9;

    double min_value = 10;
    double max_value = 11;

    uint32 min_length = 12;
    uint32 max_length = 13;

    bool autocomplete = 14;
}

message ApplicationCommandOptionChoice {
    string name = 1;
    map<string, string> name_localizations = 2;
    bytes value = 3;
}
